Move node-express to more generic node template.

--- a/charts/node/templates/deployment.yaml
+++ b/charts/node/templates/deployment.yaml
@@ -3,9 +3,9 @@ kind: Deployment
 metadata:
   annotations:
     timestamp: {{ now | quote }}
-  name: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+  name: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
   labels:
-    app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+    app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
     version: {{ .Values.appVersion }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
@@ -13,21 +13,21 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+      app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
   template:
     metadata:
       annotations:
         timestamp: {{ now | quote }}
       labels:
-        app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+        app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
         version: {{ .Values.appVersion }}
     spec:
       containers:
-      - name: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
-        image: "{{ .Values.images.app.repository }}:{{ .Values.images.app.tag }}"
+      - name: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
+        image: "{{ .Values.images.app.repository }}:{{ .Values.appEnvironment }}"
         imagePullPolicy: Always
         resources:
-          {{- if eq .Values.productionBranch .Values.images.app.tag }}
+          {{- if eq .Values.productionBranch .Values.appEnvironment }}
           {{- toYaml .Values.images.app.resources | nindent 10 }}
           {{- else }}
           {{- toYaml .Values.images.app.devresources | nindent 10 }}
@@ -38,9 +38,9 @@ spec:
           - name: QUANT_PRODUCTION_ENVIRONMENT
             value: "{{ .Values.productionBranch }}"
           - name: QUANT_ENVIRONMENT_BRANCH
-            value: "{{ .Values.images.app.tag }}"
+            value: "{{ .Values.appEnvironment }}"
           - name: QUANT_ENVIRONMENT_TYPE
-            {{- if eq .Values.productionBranch .Values.images.app.tag }}
+            {{- if eq .Values.productionBranch .Values.appEnvironment }}
             value: "production"
             {{- else }}
             value: "development"
