--- a/charts/drupal/templates/service-app-default.yaml
+++ b/charts/drupal/templates/service-app-default.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.productionBranch .Values.images.app.tag }}
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: v1
 kind: Service
 metadata:
