--- a/charts/node/Chart.yaml
+++ b/charts/node/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: node-express
-description: Default Node Express Deployment installation chart for Quant Cloud
+name: node
+description: Default Node.js Deployment installation chart for Quant Cloud
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,9 +15,4 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.0
-
-dependencies:
-- name: ingress
-  version: 0.2.0
-  repository: "https://quantcdn.github.io/helm-charts"
+version: 0.3.0
