--- a/charts/node/templates/pull-secret.yaml
+++ b/charts/node/templates/pull-secret.yaml
@@ -1,10 +1,8 @@
-{{- if eq .Values.productionBranch .Values.images.app.tag }}
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: quant-cloud
-  annotations:
-    "helm.sh/resource-policy": keep
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "quant.imagePullSecretValue" . }}
