--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -7,6 +7,7 @@ region: us
 nameOverride: ""
 fullnameOverride: ""
 productionBranch: main
+appEnvironment: main
 
 images:
   pullPolicy: Always
@@ -107,9 +108,7 @@ ingress:
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.0"
-
-appEnvironment: main
+appVersion: "{{ .Chart.Version }}"
 
 configName: 
 secrets:
