--- a/charts/ingress/templates/ingress.yaml
+++ b/charts/ingress/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.productionBranch .Values.images.app.tag }}
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
