Move from tag to appEnvironment.

--- a/charts/cloud-config/templates/env.yaml
+++ b/charts/cloud-config/templates/env.yaml
@@ -1,4 +1,4 @@
-{{- if or (eq .Values.productionBranch .Values.images.app.tag) (ne .Values.configName false) }}
+{{- if or (eq .Values.productionBranch .Values.appEnvironment) (ne .Values.configName false) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
