--- a/charts/drupal-nextjs/templates/deployment.yaml
+++ b/charts/drupal-nextjs/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: {{ .Values.images.nextjs.name }}-data
           persistentVolumeClaim:
             claimName: "{{ .Values.images.nextjs.name }}-pvc-{{ .Values.appEnvironment }}"
-        {{- if and (eq .Values.productionBranch .Values.appEnvironment) (.Values.images.redis.enabled)  }}
+        {{- if .Values.images.redis.enabled }}
         - name: redis-data
           persistentVolumeClaim:
             claimName: "redis-pvc-{{ .Values.appEnvironment }}"
