Enable redis pvc in non-production environments.

--- a/charts/drupal/templates/app.yaml
+++ b/charts/drupal/templates/app.yaml
@@ -34,7 +34,7 @@ spec:
         - name: drupal-data
           persistentVolumeClaim:
             claimName: "{{ .Values.images.drupal.name }}-pvc-{{ .Values.appEnvironment }}"
-        {{- if and (eq .Values.productionBranch .Values.appEnvironment) (.Values.images.redis.enabled)  }}
+        {{- if .Values.images.redis.enabled }}
         - name: redis-data
           persistentVolumeClaim:
             claimName: "redis-pvc-{{ .Values.appEnvironment }}"
@@ -105,7 +105,11 @@ spec:
             - --save 60 1
             - --loglevel warning
             - --maxmemory-policy {{ .Values.images.redis.cachePolicy | default "volatile-lru" }}
-            - --maxmemory {{ .Values.images.redis.mamxmemory | default "419430400" }}
+            {{- if eq .Values.productionBranch .Values.appEnvironment }}
+            - --maxmemory {{ .Values.images.redis.maxMemory | default "419430400" }}
+            {{- else }}
+            - --maxmemory {{ .Values.images.redis.maxMemoryDev | default "209715200" }}
+            {{- end }}
           imagePullPolicy: {{ .Values.images.redis.pullPolicy | default .Values.images.pullPolicy }}
           ports:
             - name: {{ .Values.images.redis.name }}
