--- a/charts/drupal-nextjs/templates/cm-nextjs.yaml
+++ b/charts/drupal-nextjs/templates/cm-nextjs.yaml
@@ -5,5 +5,8 @@ metadata:
 data:
     NEXT_PUBLIC_DRUPAL_BASE_URL: {{ .Values.images.nextjs.config.drupal_base | default "http://localhost" }}
     NEXT_PUBLIC_IMAGE_DOMAIN: "" # Relative images on Quant Cloud.
+    NEXT_IMAGE_DOMAIN: {{ .Values.images.nextjs.config.drupal_base | default "http://localhost" | replace "http://" "" | replace "https://" "" }}
     DRUPAL_PREVIEW_SECRET: {{ .Values.secrets.drupal.preview_secret | default "secret" }}
     DRUPAL_REVALIDATE_SECRET: {{ .Values.secrets.drupal.revalidate_secret | default "secret" }}
+    DRUPAL_CLIENT_SECRET: {{ .Values.secrets.drupal.client_secret | default "secret" }}
+    DRUPAL_CLIENT_ID: {{ .Values.secrets.drupal.client_id | default "secret" }}
