--- a/charts/drupal/templates/location-optimizer.yaml
+++ b/charts/drupal/templates/location-optimizer.yaml
@@ -13,7 +13,20 @@ data:
       "params": {
         "policy": "static",
         "mustInclude": [
-            {"locationcode":"sea", "provider": "lumen"}
+            {"locationcode":"lax","provider":"lumen"}
+        ],
+        "chooseFrom": ["well-known-egress-ips"],
+        "minimumLocations": 1,
+        "maximumLocations": 1
+      }
+    }
+  {{- else if eq .Values.region "au" }}
+    {
+      "strategy":"SolverServiceV1",
+      "params": {
+        "policy": "static",
+        "mustInclude": [
+            {"locationcode":"bne","provider":"rackcorp"}
         ],
         "minimumLocations": 1,
         "maximumLocations": 1
