--- a/charts/drupal-nextjs/templates/pvc-drupal.yaml
+++ b/charts/drupal-nextjs/templates/pvc-drupal.yaml
@@ -1,3 +1,4 @@
+{{- if ! .Values.secrets.s3fs.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -13,3 +14,4 @@ spec:
       {{- else }}
       storage: {{ .Values.images.drupal.devstorage }}
       {{- end }}
+{{- end }}
