--- a/charts/drupal-nextjs/templates/deployment.yaml
+++ b/charts/drupal-nextjs/templates/deployment.yaml
@@ -102,21 +102,25 @@ spec:
             - name: {{ .Values.images.nextjs.name }}
               containerPort: {{ .Values.images.nextjs.port }}
               protocol: TCP
+          startupProbe:
+            failureThreshold: 50
+            periodSeconds: 10
+            httpGet:
+              path: /.well-known/startup
           readinessProbe:
             failureThreshold: 3
-            initialDelaySeconds: 300
+            initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
-            tcpSocket:
-              port: {{ .Values.images.nextjs.port }}
+            httpGet:
+              path: /.well-known/ready
             timeoutSeconds: 1
           livenessProbe:
             failureThreshold: 3
-            initialDelaySeconds: 300
-            periodSeconds: 10
+            periodSeconds: 5
             successThreshold: 1
-            tcpSocket:
-              port: {{ .Values.images.nextjs.port }}
+            httpGet:
+              path: /.well-known/liveness
           envFrom:
             - configMapRef:
                 name: "{{ .Values.images.drupal.name }}-config-{{ .Values.appEnvironment }}"
