--- a/charts/drupal-nextjs/templates/deployment.yaml
+++ b/charts/drupal-nextjs/templates/deployment.yaml
@@ -48,12 +48,11 @@ spec:
         {{- end }}
       initContainers:
         - name: init-container-{{ .Values.appEnvironment }}
-          image: docker pull ghcr.io/quantcdn/backend-init:main
+          image: ghcr.io/quantcdn/backend-init:main
           command:
             - /usr/local/bin/backend-init
             - --url
             - http://localhost/jsonapi
-
       containers:
         ### BEGIN DRUPAL CONTAINER
         - name: "{{ .Values.images.drupal.name }}-{{ .Values.appEnvironment }}"
