--- a/charts/drupal-nextjs/values.yaml
+++ b/charts/drupal-nextjs/values.yaml
@@ -127,12 +127,16 @@ ingress:
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: 
+appVersion:
 
 # Secrets
 # Manage app secrets with kubernetes rather than committing
 # in the codebase itself.
 secrets:
+  quant:
+    organization:
+    project:
+    token:
   registry:
     user:
     token:
