--- a/charts/drupal-nextjs/templates/cm-drupal.yaml
+++ b/charts/drupal-nextjs/templates/cm-drupal.yaml
@@ -20,4 +20,4 @@ data:
     QUANT_PRODUCTION_ENVIRONMENT: "{{ .Values.productionBranch | default "main" }}"
     QUANT_ENVIRONMENT_BRANCH: "{{ .Values.appEnvironment }}"
     QUANT_ENVIRONMENT_TYPE: "{{ include "quant.environmentType" . }}"
-    QUANT_PROJECT_UUID: "{{ .Values.secrets.quant.project_uuid }}"
+    QUANT_PROJECT_UUID: "{{ .Values.secrets.quant.project_uuid | b64dec }}"
